// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextField Text Field Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-fov8r7"
        >
          <div
            className="css-1pofbhl"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1xzzqfw-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-fov8r7"
        >
          <div
            className="css-8u4mn7"
          >
            <div>
              <input
                className="css-9nc95a"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1xzzqfw-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-1ox17vl"
        >
          <div
            className="css-1pofbhl"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1xzzqfw-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-fov8r7"
        >
          <div
            className="css-1pofbhl"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1xzzqfw-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-1m8fdn3"
        >
          <div
            className="css-1pofbhl"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1xzzqfw-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with KNOBS 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          className="css-14s4iyf"
        >
          <div
            className="css-1ox17vl"
          >
            <div
              className="css-1pofbhl"
            >
              <div
                className="css-irhnnw-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-1k5aruc-Icon"
                  />
                </span>
              </div>
              <div>
                <input
                  className="css-whxk0k"
                  disabled={false}
                  placeholder="Label"
                  required={false}
                />
                <label
                  className="css-1xzzqfw-Label"
                >
                  Label
                   
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-fov8r7"
        >
          <div
            className="css-1pofbhl"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1xzzqfw-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-fov8r7"
        >
          <div
            className="css-1gcax3r"
          >
            <div>
              <input
                className="css-17me36a"
                disabled={false}
                placeholder="Label "
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-fov8r7"
        >
          <div
            className="css-1gcax3r"
          >
            <div>
              <input
                className="css-1a58avm"
                disabled={false}
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Placeholder, icon and size 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-fov8r7"
        >
          <div
            className="css-1pofbhl"
          >
            <div
              className="css-irhnnw-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div>
              <input
                className="css-whxk0k"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1xzzqfw-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-fov8r7"
        >
          <div
            className="css-1pofbhl"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1xzzqfw-Label"
              >
                Label
                 
              </label>
            </div>
            <div
              className="css-1096dwj-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-fov8r7"
        >
          <div
            className="css-1pofbhl"
          >
            <div
              className="css-9rjp3g-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div>
              <input
                className="css-whxk0k"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1xzzqfw-Label"
              >
                Label
                 
              </label>
            </div>
            <div
              className="css-9rjp3g-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField disabled with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-2fmpo3"
        >
          <div
            className="css-1pofbhl"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1xzzqfw-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-1u7p1u7"
        >
          <div
            className="css-1pofbhl"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1xzzqfw-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-14s4iyf"
      >
        <div
          className="css-1n57hd6"
        >
          <div
            className="css-1pofbhl"
          >
            <div>
              <input
                className="css-whxk0k"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-1xzzqfw-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField locked with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-6z3bl5"
            >
              <div
                className="css-1pofbhl"
              >
                <div>
                  <input
                    className="css-whxk0k"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1xzzqfw-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-1upipc4-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-1vije25"
            >
              <div
                className="css-1pofbhl"
              >
                <div>
                  <input
                    className="css-whxk0k"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1xzzqfw-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-1upipc4-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-m6adx1"
            >
              <div
                className="css-1pofbhl"
              >
                <div>
                  <input
                    className="css-whxk0k"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1xzzqfw-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-1upipc4-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-6z3bl5"
            >
              <div
                className="css-8u4mn7"
              >
                <div>
                  <input
                    className="css-9nc95a"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1xzzqfw-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-1upipc4-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-1avnyjk-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-1vije25"
            >
              <div
                className="css-8u4mn7"
              >
                <div>
                  <input
                    className="css-9nc95a"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1xzzqfw-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-1upipc4-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-1avnyjk-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="css-14s4iyf"
          >
            <div
              className="css-m6adx1"
            >
              <div
                className="css-8u4mn7"
              >
                <div>
                  <input
                    className="css-9nc95a"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="css-1xzzqfw-Label"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="css-1upipc4-IconWrapper"
                >
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-1avnyjk-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with label and statuses 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div>
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-iv7cp0"
              >
                <div
                  className="css-8u4mn7"
                >
                  <div
                    className="css-irhnnw-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                    >
                      <span
                        className="css-1k5aruc-Icon"
                      />
                    </span>
                  </div>
                  <div>
                    <input
                      className="css-9nc95a"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="css-1xzzqfw-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-szec59"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-hnerwf-Icon"
                />
              </span>
              Error in Text Field
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div>
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-yfmn87"
              >
                <div
                  className="css-8u4mn7"
                >
                  <div
                    className="css-irhnnw-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                    >
                      <span
                        className="css-1k5aruc-Icon"
                      />
                    </span>
                  </div>
                  <div>
                    <input
                      className="css-9nc95a"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="css-1xzzqfw-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-szec59"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-hnerwf-Icon"
                />
              </span>
              Error in Text Field
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div>
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-f2ryh3"
              >
                <div
                  className="css-8u4mn7"
                >
                  <div
                    className="css-irhnnw-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                    >
                      <span
                        className="css-1k5aruc-Icon"
                      />
                    </span>
                  </div>
                  <div>
                    <input
                      className="css-9nc95a"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="css-1xzzqfw-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-szec59"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-hnerwf-Icon"
                />
              </span>
              Error in Text Field
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div>
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-1ox17vl"
              >
                <div
                  className="css-8u4mn7"
                >
                  <div
                    className="css-irhnnw-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                    >
                      <span
                        className="css-1k5aruc-Icon"
                      />
                    </span>
                  </div>
                  <div>
                    <input
                      className="css-9nc95a"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="css-1xzzqfw-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-4kgaf"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-xjwhwn-Icon"
                />
              </span>
              Error in Text Field
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div>
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-fov8r7"
              >
                <div
                  className="css-8u4mn7"
                >
                  <div
                    className="css-irhnnw-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                    >
                      <span
                        className="css-1k5aruc-Icon"
                      />
                    </span>
                  </div>
                  <div>
                    <input
                      className="css-9nc95a"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="css-1xzzqfw-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-4kgaf"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-xjwhwn-Icon"
                />
              </span>
              Error in Text Field
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div>
            <div
              className="css-14s4iyf"
            >
              <div
                className="css-1m8fdn3"
              >
                <div
                  className="css-8u4mn7"
                >
                  <div
                    className="css-irhnnw-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                    >
                      <span
                        className="css-1k5aruc-Icon"
                      />
                    </span>
                  </div>
                  <div>
                    <input
                      className="css-9nc95a"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="css-1xzzqfw-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-4kgaf"
            >
              <span
                className="css-1gnbc76-Icon"
              >
                <span
                  className="css-xjwhwn-Icon"
                />
              </span>
              Error in Text Field
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
